--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "next",
         "build": "next build",
         "start": "next start",
-        "export": "npm run build && next export"
+        "export": "next build && next export"
     },
     "author": "EnvyTheme.com",
     "license": "ISC",
