--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-accessible-accordion": "^3.3.5",
         "react-dom": "^17.0.2",
         "react-image-lightbox": "^5.1.4",
+        "react-markdown": "^8.0.3",
         "react-modal-video": "^1.2.8",
         "react-owl-carousel3": "^2.2.5",
         "react-particles-js": "^2.7.1",
