--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -42,4 +42,16 @@ collections:
       file: "content/impact.md"
       fields:
         - { label: "our impact", name: "body", widget: "markdown"}
+  - label: "Blog"
+    name: "blog"
+    folder: "content/blog"
+    create: true
+    identifier_field: 
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+   fields:
+    - {label: "Name", name: "name", widget: "string"}
+    - {label: "Publish Date", name: "date", widget: "datetime"}
+    - {label: "Featured Image", name: "thumbnail", widget: "image"}
+    - {label: "Body", name: "body", widget: "markdown"}
+
     
