--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -46,7 +46,7 @@ collections:
     label: "Blog"
     folder: "content/blog"
     create: true
-    identifier_field: 
+    identifier_field: 'name'
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
      - {label: "Name", name: "name", widget: "string"}
