--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "animate.css": "^4.1.1",
         "axios": "^0.21.4",
+        "gray-matter": "^4.0.3",
         "netlify-cms-app": "^2.15.72",
         "next": "^12.0.4",
         "next-videos": "^1.4.0",
