--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "next",
-        "build": "next build",
+        "build": "next build  && next start",
         "start": "next start",
         "export": "next build && next export"
     },
