team and blog pages update

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-owl-carousel3": "^2.2.5",
         "react-particles-js": "^2.7.1",
         "react-visibility-sensor": "^5.1.1",
+        "remark-gfm": "^3.0.1",
         "sass": "^1.43.4",
         "sweetalert2": "^11.1.10",
         "sweetalert2-react-content": "^4.2.0"
