--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -58,7 +58,7 @@ collections:
     folder: "content/team"
     create: true
     identifier_field: 'name'
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"
     fields:
      - {label: "Name", name: "name", widget: "string"}
      - {label: "Publish Date", name: "date", widget: "datetime"}
