--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -61,7 +61,7 @@ collections:
     slug: "{{slug}}"
     fields:
      - {label: "Name", name: "name", widget: "string"}
-     - {label: "Publish Date", name: "date", widget: "datetime"}
+     - {label: "Publish Date", name: "date", widget: "datetime", format: "LLL", picker_utc: false,  date_format: "DD.MM.YYYY" ,time_format: "HH:mm"}
      - {label: "Featured Image", name: "thumbnail", widget: "image"}
      - {label: "Body", name: "body", widget: "markdown"}
   - name: "registrations"
