--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -50,7 +50,7 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
      - {label: "Name", name: "name", widget: "string"}
-     - {label: "Publish Date", name: "date", widget: "datetime"}
+     - {label: "Publish Date", name: "date", widget: "datetime", format: "LLL", picker_utc: false,  date_format: "DD.MM.YYYY" ,time_format: "HH:mm"}
      - {label: "Featured Image", name: "thumbnail", widget: "image"}
      - {label: "Body", name: "body", widget: "markdown"}
   - name: "team"
@@ -74,7 +74,7 @@ collections:
      - {label: "Name", name: "name", widget: "string"}
      - {label: "Tag", name: "tag", widget: "string"}
      - {label: "Registration Link", name: "link", widget: "string"}
-     - {label: "Publish Date", name: "date", widget: "datetime"}
+     - {label: "Publish Date", name: "date", widget: "datetime", format: "LLL", picker_utc: false,  date_format: "DD.MM.YYYY" ,time_format: "HH:mm"}
      - {label: "Featured Image", name: "banner", widget: "image"}
      - {label: "Body", name: "body", widget: "markdown"}
  
